fix: #649 remove flex-wrap

--- a/mw-webapp/src/component/tag/Tag.module.scss
+++ b/mw-webapp/src/component/tag/Tag.module.scss
@@ -18,7 +18,6 @@
 
 .tag {
   display: flex;
-  flex-wrap: nowrap;
   align-items: center;
   justify-content: center;
   border: 1px solid var(--primaryStrokeColor);
